--- a/src/styles/objects.scss
+++ b/src/styles/objects.scss
@@ -31,4 +31,9 @@
   &:hover {
     background-color: lighten($purple, 28%);
   }
+
+  & > .icon {
+    display: block;
+    margin: 0 auto;
+  }
 }
